# vmaf-video-qctest

./: .gitignore  DEPLOYMENT.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: assessments.py  reports.py  upload.py  videos.py
backend/app/core/: config.py  database.py
backend/app/models/: video.py
backend/app/schemas/: __init__.py  video.py
backend/app/services/: assessment_service.py  ffmpeg_service.py  report_service.py  upload_service.py
backend/reports/assessment_1/: vmaf_output.json
backend/reports/assessment_10/: vmaf_output.json
backend/reports/assessment_11/: vmaf_output.json
backend/reports/assessment_12/: frame_data.json  vmaf_output.json
backend/reports/assessment_13/: frame_data.json  vmaf_output.json
backend/reports/assessment_2/: frame_data.json  vmaf_output.json
backend/reports/assessment_3/: vmaf_output.json
backend/reports/assessment_4/: frame_data.json  vmaf_output.json
backend/reports/assessment_5/: vmaf_output.json
backend/reports/assessment_6/: frame_data.json
backend/reports/assessment_7/: frame_data.json  vmaf_output.json
backend/reports/assessment_8/: vmaf_output.json
backend/reports/assessment_9/: frame_data.json  vmaf_output.json
backend/reports/report_1/: report.json  report.xlsx
backend/reports/report_2/: report.json  report.xlsx
backend/tests/: conftest.py  test_api_assessments.py  test_api_videos.py  test_ffmpeg_service.py  test_models.py  test_schemas.py  test_upload_service.py
frontend/: Dockerfile  (+6 more)
(+32 files in other folders)
